
Package: PSCBS
==============

Version: 0.11.1 [2011-06-28]
o DOCUMENTATION: Added Rd help for as.data.frame() of PairedPSCBS.


Version: 0.11.0 [2011-06-14]
o Renamed all column names of returned data frames such that
  they follow the camelCase naming conventions in addition
  to be somewhat shorter too.
o GENERALIZATION: Added argument 'columnNamesFlavor' to segmentByCBS().


Version: 0.10.2 [2011-06-07]
o CLEANUP: Cleaned up the example():s.
o Added more biocViews categories to DESCRIPTION


Version: 0.10.1 [2011-05-31]
o GENERALIZATION: The package can now be *installed* without the
  DNAcopy package being installed.  If package is loaded without
  DNAcopy installed, an informative message will explain how to
  install it.
o Added installDNAcopy(), which will install DNAcopy from Bioconductor.
o ROBUSTNESS: Now all DNAcopy functions are called as DNAcopy::nnn().


Version: 0.10.0 [2011-05-29]
o Renamed all arguments, variables, and functions referring to 'tau' to
  refer to 'delta' reflecting the notation of the Paired PSCBS paper.
o Renamed options, example code and help pages to reflect new package name.
o Updated references in help pages.
o Now the paired PSCBS is formally referred to as 'Paired PSCBS'.
o Renamed package to PSCBS (from 'psCBS').


Version: 0.9.54 [2011-04-27]
o Added argument 'maxC' to estimateTauLOHByMinC1ForNonAB().


Version: 0.9.53 [2011-04-14]
o Added argument 'max' to estimateTauAB() and estimateTauLOH().


Version: 0.9.52 [2011-04-14]
o BUG FIX: Argument 'minSize' of callAB() and callLOH() had no effect.


Version: 0.9.51 [2011-04-12]
o Added argument 'minSize' to callAB() and callLOH() for PairedPSCBS.
o Now the a conflicting call in callLOH()/callAB() with 
  argument xorCalls=TRUE is set to NA to contrast it from
  a FALSE call.


Version: 0.9.50 [2011-04-12]
o Added argument 'xorCalls' to callLOH() and callAB() for
  PairedPSCBS.  When TRUE (the default), a segment that 